--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,9 +3,7 @@
     <string name="app_name">Direct link</string>
     <string name="the_link_from_the_clipboard">ссылка из буфера обмена</string>
     <string name="create">Создать</string>
-    <string name="copy">Копировать</string>
-    <string name="share">Поделиться</string>
     <string name="text_error_nepodhodit_link">ссылка не соответствует формату</string>
     <string name="abaut">О программе</string>
-    <string name="direct_link_dropbox">Direct link dropbox 0.2</string>
+    <string name="direct_link_dropbox">Direct link dropbox 0.2\n\n donat sb 79027228625 \n\n https://t.me/DmitriyDeomin</string>
 </resources>
