--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="create">Create</string>
     <string name="text_error_nepodhodit_link">the link doesn\'t match the format</string>
     <string name="abaut">Abaut</string>
-    <string name="direct_link_dropbox">Direct link dropbox 0.2\n\n donat sb 79027228625 \n\n https://t.me/DmitriyDeomin</string>
+    <string name="direct_link_dropbox">Direct link dropbox 0.3\n\n donat sb 79027228625 \n\n https://t.me/DmitriyDeomin</string>
+    <string name="ok">Ok</string>
+    <string name="copy_bufer_ok">Copied to the clipboard</string>
 </resources>
